# ChangeLog for dev-perl/FileHandle-Unget
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/FileHandle-Unget/ChangeLog,v 1.23 2010/10/20 08:29:52 tove Exp $

  20 Oct 2010; Torsten Veller <tove@gentoo.org>
  -FileHandle-Unget-0.16.21.ebuild:
  Cleanup

  14 Oct 2010; Brent Baude <ranger@gentoo.org>
  FileHandle-Unget-0.16.23.ebuild:
  stable ppc, bug 329525

  24 Jul 2010; Raúl Porcel <armin76@gentoo.org>
  FileHandle-Unget-0.16.23.ebuild:
  ia64/sparc stable wrt #329525

  23 Jul 2010; Torsten Veller <tove@gentoo.org>
  FileHandle-Unget-0.16.23.ebuild:
  Stable on x86 and amd64 (#329525)

  07 Sep 2009; Torsten Veller <tove@gentoo.org>
  -FileHandle-Unget-0.16.22.ebuild:
  Cleanup

*FileHandle-Unget-0.16.23 (31 Aug 2009)

  31 Aug 2009; Torsten Veller <tove@gentoo.org>
  +FileHandle-Unget-0.16.23.ebuild:
  Version bump

*FileHandle-Unget-0.16.22 (09 Sep 2008)

  09 Sep 2008; Torsten Veller <tove@gentoo.org>
  +FileHandle-Unget-0.16.22.ebuild:
  Version bump

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  FileHandle-Unget-0.16.21.ebuild:
  Ebuild maintenance

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  FileHandle-Unget-0.16.21.ebuild:
  Adding perl dep; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  FileHandle-Unget-0.16.21.ebuild:
  Mark 0.16.21 stable on ia64

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  -FileHandle-Unget-0.14.ebuild, FileHandle-Unget-0.16.21.ebuild:
  Marking stable amd64

  31 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  FileHandle-Unget-0.16.21.ebuild:
  Stable on ppc.

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  FileHandle-Unget-0.16.21.ebuild:
  Mark 0.16.21 ~ia64

*FileHandle-Unget-0.16.21 (26 Mar 2006)

  26 Mar 2006; Michael Cummings <mcummings@gentoo.org>
  +FileHandle-Unget-0.16.21.ebuild, -FileHandle-Unget-0.1621.ebuild:
  Fixing version numbers for 16.21 from 1621 - less confusion on next release.