@@ -1,13 +1,11 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/FileHandle-Unget/FileHandle-Unget-0.16.23.ebuild,v 1.4 2010/10/14 18:46:35 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/FileHandle-Unget/FileHandle-Unget-0.162.300.ebuild,v 1.1 2011/01/14 12:10:55 tove Exp $
 
 EAPI=2
 
-inherit versionator
-MY_P=${PN}-$(delete_version_separator 2 )
-S=${WORKDIR}/${MY_P}
 MODULE_AUTHOR=DCOPPIT
+MODULE_VERSION=0.1623
 inherit perl-module versionator
 
 DESCRIPTION="A FileHandle which supports ungetting of multiple bytes"
