@@ -1,14 +1,12 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/FreezeThaw/FreezeThaw-0.50.01.ebuild,v 1.5 2010/10/18 19:22:15 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/FreezeThaw/FreezeThaw-0.500.100.ebuild,v 1.1 2011/01/14 12:13:05 tove Exp $
 
 EAPI=2
 
-inherit versionator
-MY_P=${PN}-$(delete_version_separator 2 )
-S=${WORKDIR}/${MY_P}
 MODULE_AUTHOR=ILYAZ
 MODULE_SECTION=modules
+MODULE_VERSION=0.5001
 inherit perl-module
 
 DESCRIPTION="converting Perl structures to strings and back"
