@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST Lexical-Persistence-1.020.tar.gz 12228 RMD160 6b09232043c2decf69c02918b6d0ca1611c51b97 SHA1 c071172ff16c81f2d2a79dad22c6f740368b70e7 SHA256 972cd0c175947f8789927eb32bfa01d21b3bb981d8841f7e0c74c26c2fd59172
-EBUILD Lexical-Persistence-1.02.0.ebuild 678 RMD160 a74e98962151ff7f0600fa4f76b839e8350b49e2 SHA1 5aee8d68b2eed0ee1699e6d5435e268573802d3d SHA256 1129739e077249f52e846aa9b49d8e4e32d1dc212dcab7285965bd4c5ea4f70e
-MISC ChangeLog 954 RMD160 7a815b85dc39485888fa0adfeb7c9ce753d0910f SHA1 11452224c65c9055830f608526000ebe7c870f9c SHA256 3e7af8a75652841b796bc7deb940f4838133617d88adf16b96129f9e11049fbb
+EBUILD Lexical-Persistence-1.20.ebuild 561 RMD160 ba9a4ec5113976aae8a7e1a59017af55e36aa408 SHA1 693bb086e59fec8ac3e3299cf20c0424fe5530db SHA256 0f0ea71fe1f02ae336bc1371bd6a7acc836f15cfaf34b172030dd64620ac0950
+MISC ChangeLog 1141 RMD160 df06b5d9e7232a140a92ce779f28bc95e7101a7f SHA1 9a33e657a8113eece2aa7729baac1da7f05c0216 SHA256 5fbf46d4c20b0af20f37d88fbe94052e6163c1ba3b61ec403760a6315beb1723
 MISC metadata.xml 314 RMD160 2c490bda3743359d2c3b403c5a2301a772e59bfb SHA1 91d8b7e4d5091c27873a3073d169c335aee8c642 SHA256 3c4282248a7bb55e6c09933610d0520544a4a02bdda13ceafd039b209fe71638
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyPf1cACgkQV3J2n04EauxiHQCgn1Lr6ULVnUwiRqJv9b6ezypa
-6pEAnjRYAku0eNQLQuPRP7VUm7EMIQOn
-=fb+o
+iEYEARECAAYFAk0wPvcACgkQV3J2n04Eauw8agCgwJGSMS7CYFiv4Y7IDopBpQL6
+yV0Anigx8b/VSLSLH2IOcmkCJ6/yKP73
+=dbAu
 -----END PGP SIGNATURE-----
