@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/FreezeThaw
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/FreezeThaw/ChangeLog,v 1.28 2010/10/20 08:28:50 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/FreezeThaw/ChangeLog,v 1.29 2011/01/14 12:13:05 tove Exp $
+
+*FreezeThaw-0.500.100 (14 Jan 2011)
+
+  14 Jan 2011; Torsten Veller <tove@gentoo.org> -FreezeThaw-0.50.01.ebuild,
+  +FreezeThaw-0.500.100.ebuild:
+  Convert ebuild version
 
   20 Oct 2010; Torsten Veller <tove@gentoo.org> -FreezeThaw-0.43-r1.ebuild,
   -FreezeThaw-0.45.ebuild, -FreezeThaw-0.50.ebuild:
