@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/FileHandle-Unget
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/FileHandle-Unget/ChangeLog,v 1.23 2010/10/20 08:29:52 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/FileHandle-Unget/ChangeLog,v 1.24 2011/01/14 12:10:55 tove Exp $
+
+*FileHandle-Unget-0.162.300 (14 Jan 2011)
+
+  14 Jan 2011; Torsten Veller <tove@gentoo.org>
+  -FileHandle-Unget-0.16.23.ebuild, +FileHandle-Unget-0.162.300.ebuild:
+  Convert ebuild version
 
   20 Oct 2010; Torsten Veller <tove@gentoo.org>
   -FileHandle-Unget-0.16.21.ebuild:
